# FINANCE-TRACKER

./: README.md
backend/: CMakeLists.txt
backend/include/: finance.h
backend/src/: finance.cpp  main.cpp
frontend/: dashboard.html  index.html
frontend/css/: style.css
frontend/js/: main.js
